--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -8,7 +8,7 @@ html,
 body
   background: $background-color-page
 
-  font-family: "Lato", serif
+  font-family: "Lato", sans-serif
   -webkit-font-smoothing: antialiased
   font-size: 100%
 
