landing page image check

--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -36,7 +36,7 @@
         span $34
         | &nbsp;/ day
 
-    img(name='GimmeCar Rental Fleet' src='assets/toyota_corolla.png')
+    = image_tag('toyota_corolla.png', name: 'GimmeCar Rental Fleet')
 
   #faq.landing-page-section
     h4 Here's a few answers to our most common questions
