basic reservation form created

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,9 +1,10 @@
 @import "basecoat/normalize"
 @import "basecoat/base"
+@import "basecoat/type"
 
 @import "global/colors"
 @import "global/layout"
-@import "global/text"
+@import "global/type"
 
 @import "modules/mobile"
 
