--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -146,29 +146,35 @@ div
   cursor: pointer
 
 // Column widths
-.one-third
-  width: 33.333333%
-
-.two-thirds
-  width: 66.666667%
+.one-fifth
+  width: 20%
 
 .one-fourth
   width: 25%
 
-.one-half
-  width: 50%
-
-.three-fourths
-  width: 75%
-
-.one-fifth
-  width: 20%
+.one-third
+  width: 33.333333%
 
 .two-fifths
   width: 40%
 
+.three-sevenths
+  width: 42.85714286%
+
+.one-half
+  width: 50%
+
+.four-sevenths
+  width: 57.14285714%
+
 .three-fifths
   width: 60%
+
+.two-thirds
+  width: 66.666667%
+
+.three-fourths
+  width: 75%
 
 .four-fifths
   width: 80%
