--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -7,7 +7,7 @@
   display: inline-block
 
   font-weight: 700
-  font-size: $font-size-default
+  font-size: $font-size-default + 0.0625rem
   line-height: $input-height - 0.125rem
   text-align: center
   cursor: pointer
@@ -91,7 +91,7 @@
     color: #000000
 
 .btn.btn-lg
-  height: 2.75rem
+  height: $input-height-lg
   padding: 0 1rem
   font-size: 1rem
   line-height: 2.625rem
