--- a/app/assets/stylesheets/global/_layout.sass
+++ b/app/assets/stylesheets/global/_layout.sass
@@ -15,5 +15,6 @@ $padding-default: $margin-default
 $padding-sm: $margin-sm
 $padding-ex-sm: $margin-ex-sm
 
-$input-height: 2.125rem
+$input-height: 2.25rem
 $input-height-sm: 1.75rem
+$input-height-lg: 2.5rem
