--- a/app/assets/stylesheets/public/landing.sass
+++ b/app/assets/stylesheets/public/landing.sass
@@ -3,7 +3,7 @@
 
 @import "global/colors"
 @import "global/layout"
-@import "global/text"
+@import "global/type"
 
 @import "modules/mobile"
 
@@ -46,67 +46,6 @@
   max-width: 40rem
   margin: 0 auto
   border-radius: 0.125rem
-
-  //label
-    //float: left
-    //width: 100%
-
-    ////text-transform: uppercase
-    //font-size: 0.875rem
-    //font-weight: 700
-    //line-height: 0.875rem
-    //text-align: left
-
-  //.label-note
-    //float: left
-    //margin: $margin-sm 0 0
-
-    //color: #999999
-    //font-size: 0.875rem
-    //font-weight: 700
-    //line-height: 0.875rem
-    //text-align: left
-
-
-  //input
-    //margin-top: $margin-ex-sm
-    //float: left
-    //width: 100%
-    //height: 2.125rem
-
-    //border: 0
-    //border-bottom: 0.125rem solid #dddddd
-    //background: none
-
-    //font-size: 0.875rem
-    //font-family: "Hack"
-    //color: #192531
-
-    //&:hover
-      //border-color: #cccccc
-
-    //&:focus
-      //border-color: $blue
-
-  //input:disabled
-    //color: #333333
-    //cursor: not-allowed
-    //border-color: #dddddd
-
-
-#billboard-reservation-location
-  width: 100%
-
-#billboard-reservation-date
-  float: left
-  width: 50%
-
-#billboard-reservation-submit
-  width: 100%
-
-  button
-    width: 100%
-    height: 2rem + $margin-ex-sm + 0.875rem
 
 .landing-page-section
   margin: 0 auto $margin-ex-lg
