input date complete

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -9,6 +9,7 @@
 @import "modules/mobile"
 
 @import "components/buttons"
+@import "components/flash"
 @import "components/footer"
 @import "components/inputs"
 @import "components/lists"
