--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -61,6 +61,7 @@
   font-size: 0.875rem
 
 .input-label-note
+  font-weight: 400
   color: #999999
 
 .input-field
@@ -76,6 +77,7 @@
   cursor: pointer
   font-size: $font-size-default - 0.0625rem
   font-family: "Hack"
+  font-weight: 400
 
   &:focus
     z-index: 2
