--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -8,231 +8,6 @@
       b San Bernardino.
 
     #billboard-reservation
-      #billboard-reservation-inputs
-        .input-row
-          label.input-label.input-lg Where:
-          .input-block
-            select.input-field.input-lg
-              option(value='', disabled) Current, our only location.
-              option(value='', selected) Super 8 Redlands - 1160 Arizona St., Redlands, CA 92374
-
-          .input-container.one-half
-            label.input-label.input-lg From:
-
-            .input-block.one-half.fixed
-              input.input-field.input-lg(type='text' placeholder='mm/dd/yyyy')
-            .input-block.one-half.fixed
-              select.input-field.input-lg(name='pickup_time' placeholder='--:-- AM/PM')
-                option(value='' disabled selected) --:-- AM/PM
-                - Lib::InputConstants::DATES.each do |date|
-                  option(value=date.first)= date.last
-
-          .input-container.one-half
-            label.input-label To:
-            .input-block.one-half.fixed
-              input.input-field.input-lg(type='text' placeholder='mm/dd/yyyy')
-            .input-block.one-half.fixed
-              select.input-field.input-lg(name='return_time' placeholder='--:-- AM/PM')
-                option(value='' disabled selected) --:-- AM/PM
-                - Lib::InputConstants::DATES.each do |date|
-                  option(value=date.first)= date.last
-
-          .input-submit
-            .input-block
-              button.btn.btn-full.btn-primary.left(type='submit') Continue
-
-#reservation.container
-  .form-container
-    .form-step
-      h3 Rental Dates
-    .form-inputs
-      .input-row
-        .input-container.one-half
-          label.input-label From:
-
-          .input-block.one-half.fixed
-            input.input-field(type='text' placeholder='mm/dd/yyyy')
-          .input-block.one-half.fixed
-            select.input-field(name='pickup_time' placeholder='--:-- AM/PM')
-              option(value='' disabled selected) --:-- AM/PM
-              - Lib::InputConstants::DATES.each do |date|
-                option(value=date.first)= date.last
-
-        .input-container.one-half
-          label.input-label To:
-          .input-block.one-half.fixed
-            input.input-field(type='text' placeholder='mm/dd/yyyy')
-          .input-block.one-half.fixed
-            select.input-field(name='return_time' placeholder='--:-- AM/PM')
-              option(value='' disabled selected) --:-- AM/PM
-              - Lib::InputConstants::DATES.each do |date|
-                option(value=date.first)= date.last
-
-  .form-container
-    .form-step
-      h3 Rates
-
-  .form-container
-    .form-step
-      h3 Drivers
-    .form-inputs
-      .input-row
-        .input-container.three-fifths
-          label.input-label Name
-          .input-block.one-half.fixed
-            input.input-field(type='text' placeholder='First')
-          .input-block.one-half.fixed
-            input.input-field(type='text' placeholder='Last')
-        .input-container.two-fifths
-          label.input-label
-            | License #
-            a.right(href='') Search Driver
-          .input-block
-            input.input-field(type='text' placeholder='I12345678')
-
-
-      .input-row
-        .input-container.two-thirds
-          .input-container.one-half.fixed
-            label.input-label License State
-            .input-block
-              input.input-field(type='text' placeholder='State')
-          .input-container.one-half.fixed
-            label.input-label License Country
-            .input-block
-              input.input-field(type='text' placeholder='Country')
-
-        .input-container.one-third
-          label.input-label License Expiration Date
-          .input-block
-            input.input-field(type='text' placeholder='mm/dd/yyyy')
-
-      .input-row
-        .input-container.one-half
-          label.input-label
-            | Date of Birth
-            span.text-note.right Must be 25 years of age or older.
-          .input-block
-            input.input-field(type='text' placeholder='mm/dd/yyyy')
-        .input-container.one-half
-          label.input-label Gender
-          .input-block
-            select.input-field()
-              option(value='' selected disabled) ----
-              option(value='male') Male
-              option(value='female') Female
-
-      .input-row
-        .input-container.two-fifths
-          label.input-label Email
-          .input-block
-            input.input-field(type='text' placeholder='john@gmail.com')
-        .input-container.three-fifths
-          .input-container.one-half.fixed
-            label.input-label Cell Phone #
-            .input-block
-              input.input-field(type='number' placeholder='909.555.8639')
-          .input-container.one-half.fixed
-            label.input-label Home Phone #
-            .input-block
-              input.input-field(type='number' placeholder='805.555.1231')
-
-      .input-row
-        label.input-label
-          | Address
-          span.text-note.right Customer must have an actual home street address. DO NOT accept a POST OFFICE BOX as an address.
-        .input-block
-          input.input-field(type='text' placeholder='Address 1')
-      .input-row
-        .input-block
-          input.input-field(type='text' placeholder='Address 2')
-      .input-row
-        .input-container.three-fifths
-          .input-block.two-thirds.fixed
-            input.input-field(type='text' placeholder='City')
-          .input-block.one-third.fixed
-            input.input-field(type='text' placeholder='State')
-        .input-container.two-fifths
-          .input-block.one-third.fixed
-            input.input-field(type='Number' placeholder='Zip Code')
-          .input-block.two-thirds.fixed
-            input.input-field(type='text' placeholder='Country')
-
-      .input-row
-        .input-container.one-third
-          label.input-label Insuance Company
-          .input-block
-            input.input-field(type='text' placeholder='')
-        .input-container.one-third
-          label.input-label Insuance Policy #
-          .input-block
-            input.input-field(type='text' placeholder='')
-        .input-container.one-third
-          label.input-label Insuance Phone #
-          .input-block
-            input.input-field(type='number' placeholder='')
-
-
-  .form-container
-    .form-step
-      h3
-        a Add Additional Driver
-    .form-input
-
-  .form-container
-    .form-step
-      h3 Summary
-    .form-inputs
-
-  .form-container
-    .form-step
-      h3 Payment
-    .form-inputs
-      .input-row
-        .input-container.two-fifths
-          label.input-label Credit Card #
-          .input-block
-            input.input-field(type='number' placeholder='4242 4242 4242 4242')
-        .input-container.three-fifths
-          .input-container.one-third.fixed
-            label.input-label Expiration Date
-            .input-block.three-sevenths.fixed
-              select.input-field
-                option(value='' selected disabled) --
-                option(value='1') 01
-                option(value='2') 02
-                option(value='3') 03
-                option(value='4') 04
-                option(value='5') 05
-                option(value='6') 06
-                option(value='7') 07
-                option(value='8') 08
-                option(value='9') 09
-                option(value='10') 10
-                option(value='11') 11
-                option(value='12') 12
-            .input-block.four-sevenths.fixed
-              select.input-field
-                option(value='' selected disabled) ----
-                option(value='17') 2017
-                option(value='18') 2018
-                option(value='19') 2019
-                option(value='20') 2020
-                option(value='21') 2021
-                option(value='22') 2022
-                option(value='23') 2023
-                option(value='24') 2024
-          .input-container.one-third.fixed
-            label.input-label CVC Code
-            .input-block
-              input.input-field(type='number' placeholder='123')
-          .input-container.one-third.fixed
-            label.input-label Zip Code
-            .input-block
-              input.input-field(type='number' placeholder='90210')
-
-
-
 
 .container
   #fleet.landing-page-section
@@ -250,7 +25,12 @@
     h4 Here's a few answers to our most common questions
     dl
       dt What kinds of credentials will I need to rent a car?
-      dd You must have a valid U.S. driver's license in the driver's name, a Visa, Master, Discover, or American Express credit card, and auto insurance.
+      dd You must have a valid U.S. driver's license in the driver's name and picture, a Visa, Master, Discover, or American Express credit card, and auto insurance.
+
+      dt Do you accept debit card or cash?
+      dd Unfortunately, we do not. We ONLY accept credit cards.
 
       dt Whats the minimum age required?
-      dd You need to be atleast 21 years of age to rent a car.
+      dd You need to be atleast 25 years of age to rent a car.
+
+= javascript_include_tag 'main'
