--- a/app/assets/stylesheets/components/_footer.sass
+++ b/app/assets/stylesheets/components/_footer.sass
@@ -4,10 +4,10 @@
 
 footer
   width: 100%
+  background: $background-color-footer
+  color: #eaeaea
 
 #footer-content
-  border-top: 2px solid $border-color-dark
-  border-bottom: 1px solid $border-color-light
   padding: $padding-lg 0
 
   h5
@@ -28,6 +28,8 @@ footer
     margin: 0
 
 #footer-copyright
+  margin: $margin-default 0
+
   > *
     margin: $margin-default 0
     line-height: $font-size-default + 0.25rem
