--- a/app/assets/stylesheets/modules/mobile.sass
+++ b/app/assets/stylesheets/modules/mobile.sass
@@ -1,3 +1,5 @@
+@import "global/layout"
+
 // iPad Mini
 @media screen and (max-width: 48.5rem)
   .form-step
@@ -23,3 +25,11 @@
   .three-sevenths:not(.fixed),
   .four-sevenths:not(.fixed)
     width: 100%
+
+  .container
+    padding-left: $padding-sm
+    padding-right: $padding-sm
+
+  #billboard
+    h2
+      font-size: 3rem
