--- a/app/assets/stylesheets/global/_colors.sass
+++ b/app/assets/stylesheets/global/_colors.sass
@@ -20,7 +20,10 @@ $background-color-yellow: lighten($yellow, 44.25%)
 $background-color-green: lighten($green, 47%)
 $background-color-blue: lighten($blue, 44%)
 
+//$background-color-page: lighten($theme, 5%)
+//$background-color-footer: lighten($theme, 3%)
 $background-color-page: #ffffff
+$background-color-footer: #2a2a2a
 $background-color-panel: #fafafa
 $background-color-header: #f5f5f5
 $background-color-input: #f5f5f5
