--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -11,7 +11,7 @@
 
 .container
   #fleet.landing-page-section
-    h4 Our Fleet
+    h4.margin-bottom-sm Our Fleet
     p Our fleet of Toyota Corollas come with RoadSide Assistance, back-up camera, brake assist, bluetooth, and USB and axuiliary inputs for a safe and comfortable trip.
     p#todays-rate
       b
