reservation ux complete, email sending left

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -47,6 +47,16 @@
 .input-block
   padding: 0 $padding-ex-sm/2
 
+.input-flex-container
+  display: flex
+  flex-direction: row
+
+  .input-element-fixed
+    width: auto
+
+  .input-element-flex
+    flex: 1
+
 .input-label
   padding: $padding-default $padding-ex-sm/2 0
 
