--- a/app/assets/stylesheets/public/landing.sass
+++ b/app/assets/stylesheets/public/landing.sass
@@ -54,7 +54,7 @@
 //#rental-summary,
 //#rental-reserve
 
-#rental-summary
+.rental-invoice
   h6
     float: left
     width: 100%
@@ -78,6 +78,13 @@
     margin-bottom: $margin-sm
 
     font-size: 0.875rem
+
+.emoji
+  margin-bottom: $margin-default
+
+  font-size: 4rem
+  text-align: center
+  color: darken(#ffd856, 15%)
 
 #fleet
   width: 100%
