--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -8,6 +8,8 @@ html
     meta(name="viewport" content="width=device-width" initial-scale=1 maximum-scale=1 user-scalable="no")
     link(href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet')
 
+    = csrf_meta_tag
+
   body
     header
       .container
