--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -29,7 +29,6 @@
   padding-left: $padding-lg
 
 .input-row,
-.input-block,
 .input-submit,
 .input-label,
 .input-field
@@ -45,6 +44,7 @@
   padding: $padding-default 0
 
 .input-block
+  float: left
   padding: 0 $padding-ex-sm/2
 
 .input-flex-container
