public reservation created

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,13 +1,16 @@
 @import "basecoat/normalize"
 @import "basecoat/base"
+@import "basecoat/type"
 
 @import "global/colors"
 @import "global/layout"
-@import "global/text"
+@import "global/type"
 
 @import "modules/mobile"
 
 @import "components/buttons"
+@import "components/flash"
 @import "components/footer"
+@import "components/inputs"
 @import "components/lists"
 @import "components/nav"
