--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -1,6 +1,6 @@
 #billboard
   .container
-    h2 Hassel Free Car Rental.
+    h2 Hassle Free Car Rental.
     p
       | 24-7 Car Rental. Currently serving&nbsp;
       b Redlands, Loma Linda, Highland,&nbsp;
@@ -8,27 +8,10 @@
       b San Bernardino.
 
     #billboard-reservation
-      #billboard-reservation-inputs
-        #billboard-reservation-location
-          label
-            | Where:&nbsp;
-          input(type='text' value='Super 8 Redlands - 1160 Arizona St., Redlands, CA 92374' disabled)
-          /p.label-note Currently, our only location.
-
-        #billboard-reservation-date
-          label From:
-          input(type='text' placeholder='mm/dd/yyyy')
-
-        #billboard-reservation-date
-          label To:
-          input(type='text' placeholder='mm/dd/yyyy')
-
-        #billboard-reservation-submit
-          button.btn.btn-lg.btn-primary(type='submit') Continue
 
 .container
   #fleet.landing-page-section
-    h4 Our Fleet
+    h4.margin-bottom-sm Our Fleet
     p Our fleet of Toyota Corollas come with RoadSide Assistance, back-up camera, brake assist, bluetooth, and USB and axuiliary inputs for a safe and comfortable trip.
     p#todays-rate
       b
@@ -42,7 +25,12 @@
     h4 Here's a few answers to our most common questions
     dl
       dt What kinds of credentials will I need to rent a car?
-      dd You must have a valid U.S. driver's licence in the driver's name, a Visa, Master, Discover, or American Express credit card, and auto insurance.
+      dd You must have a valid U.S. driver's license in the driver's name and picture, a Visa, Master, Discover, or American Express credit card, and auto insurance.
+
+      dt Do you accept debit card or cash?
+      dd Unfortunately, we do not. We ONLY accept credit cards.
 
       dt Whats the minimum age required?
       dd You need to be atleast 25 years of age to rent a car.
+
+= javascript_include_tag 'main'
