--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -1,5 +1,6 @@
 @import "global/layout"
 @import "global/colors"
+@import "global/type"
 
 *
   box-sizing: border-box
@@ -14,6 +15,81 @@ body
 
 html
   min-height: 100%
+
+// Headings
+// --------------------------------------------------
+// stylelint-disable selector-no-type
+h1,
+h2,
+h3,
+h4,
+h5,
+h6
+  margin-top: 0
+  margin-bottom: 0
+
+h1
+  font-size: 2.25rem
+
+h2
+  font-size: 2rem
+
+h3
+  font-size: 1.75rem
+
+h4
+  font-size: 1.5rem
+
+h5
+  font-size: 1.25rem
+
+h6
+  font-size: 1rem
+
+// Body text
+// --------------------------------------------------
+p
+  margin-top: 0
+  margin-bottom: $margin-sm
+
+small
+  font-size: 90%
+
+blockquote
+  margin: 0
+
+// Lists
+// --------------------------------------------------
+ul,
+ol
+  padding-left: 0
+  margin-top: 0
+  margin-bottom: 0
+
+ol ol,
+ul ol
+  list-style-type: lower-roman
+
+ul ul ol,
+ul ol ol,
+ol ul ol,
+ol ol ol
+  list-style-type: lower-alpha
+
+dd
+  margin-left: 0
+
+// Code
+// --------------------------------------------------
+tt,
+code
+  font-family: $mono-font
+  font-size: 12px
+
+pre
+  margin-top: 0
+  margin-bottom: 0
+  font: 12px $mono-font
 
 input:focus,
 select:focus,
@@ -146,29 +222,41 @@ div
   cursor: pointer
 
 // Column widths
-.one-third
-  width: 33.333333%
-
-.two-thirds
-  width: 66.666667%
+.one-fifth
+  width: 20%
 
 .one-fourth
   width: 25%
 
-.one-half
-  width: 50%
+.three-tenths
+  width: 30%
 
-.three-fourths
-  width: 75%
-
-.one-fifth
-  width: 20%
+.one-third
+  width: 33.333333%
 
 .two-fifths
   width: 40%
 
+.three-sevenths
+  width: 42.85714286%
+
+.one-half
+  width: 50%
+
+.four-sevenths
+  width: 57.14285714%
+
 .three-fifths
   width: 60%
+
+.two-thirds
+  width: 66.666667%
+
+.seven-tenths
+  width: 70%
+
+.three-fourths
+  width: 75%
 
 .four-fifths
   width: 80%
@@ -179,3 +267,7 @@ div
 // Text
 .text-center
   text-align: center
+
+// List Styles
+.list-no-style
+  list-style: none
