--- a/app/assets/stylesheets/global/_colors.sass
+++ b/app/assets/stylesheets/global/_colors.sass
@@ -1,16 +1,16 @@
 $red: #f73b47
 $yellow: #eabb28
-$green: #00c176
+$green: #1aca82
 $blue: #1b78bd
 $purple: #a82c7c
 
 $default-gray: #efefef
 
 // TEXT COLORS
-$text-color-red: darken($red, 20)
-$text-color-yellow: darken($yellow, 16)
-$text-color-green: darken($green, 10)
-$text-color-blue: darken($blue, 20)
+$text-color-red: darken($red, 20%)
+$text-color-yellow: darken($yellow, 16%)
+$text-color-green: darken($green, 10%)
+$text-color-blue: darken($blue, 20%)
 
 $text-color-default: #333333
 
@@ -20,9 +20,12 @@ $background-color-yellow: lighten($yellow, 44.25%)
 $background-color-green: lighten($green, 47%)
 $background-color-blue: lighten($blue, 44%)
 
+//$background-color-page: lighten($theme, 5%)
 $background-color-page: #ffffff
+$background-color-footer: #0d051a
 $background-color-panel: #fafafa
 $background-color-header: #f5f5f5
+$background-color-input: #f5f5f5
 
 // BORDER COLOR
 $border-color-red: darken($red, 15%)
@@ -30,6 +33,7 @@ $border-color-yellow: darken($yellow, 5%)
 $border-color-green: darken($green, 5%)
 $border-color-blue: $blue
 
-$border-color-dark: #dddddd
+$border-color-dark: #d9d9d9
 $border-color-panel: #e9e9e9
 $border-color-light: #eeeeee
+$border-color-input: #dedede
