--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -4,9 +4,10 @@ html
     title GimmeCar - Redlands Car Rental
     = stylesheet_link_tag 'application'
     = stylesheet_link_tag 'public/landing'
-    = stylesheet_link_tag 'modules/mobile'
     meta(name="viewport" content="width=device-width" initial-scale=1 maximum-scale=1 user-scalable="no")
     link(href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet')
+
+    = csrf_meta_tag
 
   body
     header
