--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -4,8 +4,9 @@ html
     title GimmeCar - Redlands Car Rental
     = stylesheet_link_tag 'application'
     = stylesheet_link_tag 'public/landing'
-    meta(name="viewport" content="width=device-width" initial-scale=1 maximum-scale=1 user-scalable="no")
+    meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
     link(href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet')
+    link(href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css' rel='stylesheet')
 
     = csrf_meta_tag
 
