--- a/app/assets/stylesheets/global/_colors.sass
+++ b/app/assets/stylesheets/global/_colors.sass
@@ -13,6 +13,7 @@ $text-color-green: darken($green, 10%)
 $text-color-blue: darken($blue, 20%)
 
 $text-color-default: #333333
+$text-color-placeholder: #bbbbbb
 
 // BACKGROUND COLOR
 $background-color-red: lighten($red, 38.5%)
