--- a/app/assets/stylesheets/public/landing.sass
+++ b/app/assets/stylesheets/public/landing.sass
@@ -40,9 +40,11 @@
   border-radius: 0.125rem
   position: relative
 
-//#rental-details,
-//#rental-summary,
-//#rental-reserve
+#rental-details,
+#rental-summary,
+#rental-reserve,
+#rental-confirmation
+  z-index: 2
 
 .rental-invoice
   h6
