--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -5,3 +5,16 @@
 
 .text-note
   color: #999999
+
+.logo
+  font-size: 1.5rem
+  font-weight: 900
+
+a
+  cursor: pointer
+  color: $blue
+  text-decoration: none
+  outline: 0
+
+  &:hover
+    color: #333333
