basic admin dashboard layout created

--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -7,7 +7,7 @@
   display: inline-block
 
   font-weight: 700
-  font-size: $font-size-default + 0.0625rem
+  font-size: $font-size-default
   line-height: $input-height - 0.125rem
   text-align: center
   cursor: pointer
