--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -7,14 +7,15 @@
 
 html,
 body
-  background: $background-color-page
+  height: 100vh
+  width: 100%
 
   font-family: "Lato", sans-serif
   -webkit-font-smoothing: antialiased
   font-size: 100%
 
 html
-  min-height: 100%
+  background: $background-color-page
 
 // Headings
 // --------------------------------------------------
