basic dashboard layout complete

--- a/app/assets/stylesheets/admin.sass
+++ b/app/assets/stylesheets/admin.sass
@@ -1,5 +1,5 @@
 @import "global/colors"
 
-html#grey-bg,
+html#bg-app,
 body#gimmecar-app
-  background: $background-color-panel
+  background: $background-color-app
