--- a/app/assets/stylesheets/global/_colors.sass
+++ b/app/assets/stylesheets/global/_colors.sass
@@ -11,8 +11,10 @@ $text-color-red: darken($red, 20%)
 $text-color-yellow: darken($yellow, 16%)
 $text-color-green: darken($green, 10%)
 $text-color-blue: darken($blue, 20%)
+$text-color-dark-blue: #182433
 
 $text-color-default: #333333
+$text-color-light: #999999
 $text-color-placeholder: #bbbbbb
 
 // BACKGROUND COLOR
@@ -21,10 +23,10 @@ $background-color-yellow: lighten($yellow, 44.25%)
 $background-color-green: lighten($green, 47%)
 $background-color-blue: lighten($blue, 44%)
 
-//$background-color-page: lighten($theme, 5%)
 $background-color-page: #ffffff
 $background-color-footer: #0d051a
-$background-color-panel: #fafafa
+$background-color-panel: #ffffff
+$background-color-app: #f5f7f9
 $background-color-header: #f5f5f5
 $background-color-input: #f5f5f5
 
