--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -1,15 +1,30 @@
 $input-padding-y: $padding-ex-sm/2
 
 .form-container
-  width: 20rem
+  width: 100%
+  max-width: 40rem
+
   margin: 0 auto
+
+.form-header.form-header-first
+  margin-top: 0
+
+  &:before
+    content: ' '
+    height: 0.125rem
+    width: 3rem
+    display: block
+    margin-bottom: $padding-default
+
+    background: $blue
+
 
 .form-header
   width: 100%
-  margin: $padding-default 0
+  margin: $padding-default 0 $padding-sm
 
   font-size: 1.25rem
-  font-weight: 900
+  font-weight: 700
 
 .input-row,
 .input-submit,
@@ -24,12 +39,14 @@ $input-padding-y: $padding-ex-sm/2
   margin: 0
 
 .input-submit
-  padding: $padding-default 0
+  padding-top: $padding-default
+  padding-bottom: $padding-default
 
 .form-header,
 .input-block
   float: left
-  padding: 0 $input-padding-y
+  padding-left: $input-padding-y
+  padding-right: $input-padding-y
 
 .input-flex-container
   display: flex
@@ -42,7 +59,7 @@ $input-padding-y: $padding-ex-sm/2
     flex: 1
 
 .input-label
-  padding-top: $padding-default
+  padding-top: $padding-sm
   padding-left: $input-padding-y
   padding-right: $input-padding-y
 
@@ -63,7 +80,7 @@ $input-padding-y: $padding-ex-sm/2
 
 .input-field
   height: $input-height
-  margin-top: $margin-ex-sm/2
+  margin: $margin-ex-sm/2 0
   padding: $padding-sm
   position: relative
 
@@ -91,7 +108,6 @@ $input-padding-y: $padding-ex-sm/2
 .input-field.input-lg
   height: $input-height-lg
   font-size: $font-size-default
-  margin-top: $margin-ex-sm
 
 .input-field,
 input[type=number]::-webkit-inner-spin-button,
@@ -110,8 +126,8 @@ select.input-field
     color: $text-color-placeholder
 
 .input-contrast
-  background-color: #ffffff
-  border-color: $border-color-dark
+  border-color: $border-color-input-contrast
+  background-color: $background-color-input-contrast
 
 .input-field.input-field-error
   color: $text-color-red
