--- a/app/assets/stylesheets/global/_colors.sass
+++ b/app/assets/stylesheets/global/_colors.sass
@@ -1,7 +1,7 @@
 $red: #f73b47
 $yellow: #eabb28
 $green: #1aca82
-$blue: #1b78bd
+$blue: #0094f7
 $purple: #a82c7c
 
 $default-gray: #efefef
@@ -28,7 +28,8 @@ $background-color-footer: #0d051a
 $background-color-panel: #ffffff
 $background-color-app: #f5f7f9
 $background-color-header: #f5f5f5
-$background-color-input: #f5f5f5
+$background-color-input: #ffffff
+$background-color-input-contrast: #f5f5f5
 
 // BORDER COLOR
 $border-color-red: darken($red, 15%)
@@ -39,4 +40,5 @@ $border-color-blue: $blue
 $border-color-dark: #d9d9d9
 $border-color-panel: #e9e9e9
 $border-color-light: #eeeeee
-$border-color-input: #dedede
+$border-color-input: #dfdfdf
+$border-color-input-contrast: #dedede
