hot reload is working!!! :)

--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -33,4 +33,4 @@
       dt Whats the minimum age required?
       dd You need to be atleast 25 years of age to rent a car.
 
-= javascript_include_tag 'public'
+= javascript_pack_tag 'public'
