authentication complete, need testing and bug fixes

--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -10,6 +10,11 @@
   font-size: 1.5rem
   font-weight: 900
 
+  small
+    display: block
+    font-size: 55%
+    font-weight: 400
+
 a
   cursor: pointer
   color: $blue
