--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -1,4 +1,5 @@
 $input-padding-y: $padding-ex-sm/2
+$input-margin-x: $margin-ex-sm/2
 
 .form-container
   width: 100%
@@ -80,7 +81,7 @@ $input-padding-y: $padding-ex-sm/2
 
 .input-field
   height: $input-height
-  margin: $margin-ex-sm/2 0
+  margin: $input-margin-x 0
   padding: $padding-sm
   position: relative
 
@@ -100,7 +101,6 @@ $input-padding-y: $padding-ex-sm/2
     box-shadow: 0 0 0.125rem 0 lighten($blue, 30%)
 
   &::input-placeholder,
-  &:input-placeholder,
   &:input-placeholder,
   &:placeholder,
     color: $text-color-placeholder
@@ -140,8 +140,8 @@ select.input-field
 
 .input-error-message
   float: left
-  margin: 0 ($margin-ex-sm/2) 0 0
-  padding: $padding-ex-sm
+  margin: -$input-margin-x $input-padding-y $input-margin-x
+  padding: $input-margin-x $padding-ex-sm
 
   border: 1px solid $border-color-yellow
   border-top: 0
@@ -150,6 +150,6 @@ select.input-field
   background-color: $background-color-yellow
 
   text-align: left
-  font-size: $font-size-default
+  font-size: 0.75rem
   font-weight: 700
   color: #444444
