minor fixes to reservation system, it's still incomplete

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -153,3 +153,7 @@ select.input-field
   font-size: 0.75rem
   font-weight: 700
   color: #444444
+
+.input-error-message.input-lg
+  font-size: $font-size-default
+  padding: $padding-ex-sm
