--- a/app/views/layouts/admin.slim
+++ b/app/views/layouts/admin.slim
@@ -13,16 +13,18 @@ html#bg-app
     body
       #gimmecar-app
 
-      javascript:
-        var USER = {}
-        var LOCATION = {}
-
       - if current_user
         javascript:
           var USER = #{{ current_user.to_javascript.to_json }}
+      - else
+        javascript:
+          var USER = {}
 
       - if location
         javascript:
           var LOCATION = #{{ location.to_javascript.to_json }}
+      - else
+        javascript:
+          var LOCATION = {}
 
       = javascript_pack_tag 'admin'
