--- a/app/assets/stylesheets/components/_panels.sass
+++ b/app/assets/stylesheets/components/_panels.sass
@@ -6,4 +6,4 @@
 
   border: 1px solid $border-color-panel
   border-radius: 0.125rem
-  background: $background-color-panel
+  background-color: $background-color-panel
