new attributes implementation is working, unit tests needed

--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -14,7 +14,7 @@
   color: #333333
 
   border-radius: 0.125rem
-  border: 1px solid $border-color-dark
+  border: 0.0625rem solid $border-color-dark
   background: #fbfbfb
   -webkit-appearance: none
 
