minor optimizations, color changes

--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -85,12 +85,12 @@ dd
 tt,
 code
   font-family: $mono-font
-  font-size: 12px
+  font-size: 0.75rem
 
 pre
   margin-top: 0
   margin-bottom: 0
-  font: 12px $mono-font
+  font: 0.75rem $mono-font
 
 input:focus,
 select:focus,
