--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -27,7 +27,7 @@
     box-shadow: 0 0 0.1875rem 0 $border-color-dark
 
   &:active
-    box-shadow: inset 0px 1px 0 0 $border-color-dark
+    box-shadow: inset 0 1px 0 0 $border-color-dark
 
 .btn[disabled]
   cursor: not-allowed
