--- a/app/assets/stylesheets/global/_colors.sass
+++ b/app/assets/stylesheets/global/_colors.sass
@@ -1,7 +1,7 @@
 $red: #f73b47
 $yellow: #eabb28
 $green: #1aca82
-$blue: #0094f7
+$blue: #03a9f4
 $purple: #a82c7c
 
 $default-gray: #efefef
@@ -26,7 +26,7 @@ $background-color-blue: lighten($blue, 44%)
 $background-color-page: #ffffff
 $background-color-footer: #0d051a
 $background-color-panel: #ffffff
-$background-color-app: #f5f7f9
+$background-color-app: #f9f9f8
 $background-color-header: #f5f5f5
 $background-color-input: #ffffff
 $background-color-input-contrast: #f5f5f5
