basic rental flow created, testing required

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -71,6 +71,9 @@ $input-margin-x: $margin-ex-sm/2
 
   cursor: pointer
 
+h6.input-label
+  font-size: 1rem
+
 .input-label.input-lg
   padding-top: $padding-default
   font-size: 0.875rem
