--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -113,6 +113,7 @@ h6.input-label
   font-size: $font-size-default
 
 .input-field,
+.input-range,
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button
   -webkit-appearance: none
@@ -127,6 +128,37 @@ select.input-field
 
   option:disabled
     color: $text-color-placeholder
+
+input.input-range
+  width: 100%
+  float: left
+  margin: ($input-height/2 - 0.25rem + $input-margin-x) 0 $input-margin-x 0
+
+  &:focus
+    outline: none
+
+    &::-webkit-slider-thumb
+      border-color: $blue
+      box-shadow: 0 0 0.125rem 0 lighten($blue, 20%)
+
+  &::-webkit-slider-runnable-track
+    width: 100%
+    height: 0.5rem
+    cursor: pointer
+    background: $border-color-light
+    border-radius: 0.125rem
+
+  &::-webkit-slider-thumb
+    height: 1.5rem
+    width: 0.75rem
+    margin-top: -(1.5rem/2 - 0.25rem)
+
+    border: 0.0625rem solid $border-color-input
+    border-radius: 0.125rem
+    background: #ffffff
+    cursor: pointer
+
+    -webkit-appearance: none
 
 .input-contrast
   border-color: $border-color-input-contrast
