basic rental workflow created

--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -14,6 +14,7 @@ body
   -webkit-font-smoothing: antialiased
   font-size: 100%
 
+
 html
   background: $background-color-page
 
@@ -25,33 +26,33 @@ h2,
 h3,
 h4,
 h5,
-h6
+h6,
+p
   margin-top: 0
-  margin-bottom: 0
+  margin-bottom: $margin-sm
 
 h1
-  font-size: 2.25rem
-
-h2
   font-size: 2rem
 
-h3
+h2
   font-size: 1.75rem
 
-h4
+h3
   font-size: 1.5rem
 
-h5
+h4
   font-size: 1.25rem
 
+h5
+  font-size: 1.125rem
+
 h6
-  font-size: 1rem
+  font-size: 0.875rem
 
 // Body text
 // --------------------------------------------------
 p
-  margin-top: 0
-  margin-bottom: $margin-sm
+  font-size: 0.875rem
 
 small
   font-size: 90%
