--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -23,8 +23,6 @@ $input-margin-x: $margin-ex-sm/2
 .form-header
   width: 100%
   margin: $padding-default 0 $padding-sm
-
-  font-size: 1.25rem
   font-weight: 700
 
 .input-row,
@@ -63,6 +61,7 @@ $input-margin-x: $margin-ex-sm/2
   padding-top: $padding-sm
   padding-left: $input-padding-y
   padding-right: $input-padding-y
+  margin: 0
 
   font-size: 0.75rem
   font-weight: 700
