--- a/app/assets/stylesheets/components/_flash.sass
+++ b/app/assets/stylesheets/components/_flash.sass
@@ -1,4 +1,5 @@
 @import "global/layout"
+@import "global/colors"
 
 .flash
   padding: $padding-sm
@@ -13,3 +14,8 @@
   p
     margin: 0
     line-height: 1rem
+
+.flash.flash-warning
+  border-color: $border-color-yellow
+  background-color: $background-color-yellow
+  color: $text-color-yellow
