--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -92,20 +92,22 @@ h6.input-label
   border: 1px solid $border-color-input
 
   cursor: pointer
-  font-size: $font-size-default - 0.125rem
+  font-size: 11px
   font-family: "Hack"
   font-weight: 400
 
-  &:focus
-    z-index: 2
-    border-color: $blue
-    background-color: #ffffff
-    box-shadow: 0 0 0.125rem 0 lighten($blue, 20%)
-
+  &::-webkit-input-placeholder,
+  &::-input-placeholder,
   &::input-placeholder,
-  &:input-placeholder,
-  &:placeholder,
+  &::placeholder,
     color: $text-color-placeholder
+
+.input-field:focus,
+.StripeElement--focus
+  z-index: 2
+  border-color: $blue
+  background-color: #ffffff
+  box-shadow: 0 0 0.125rem 0 lighten($blue, 20%)
 
 .input-field.input-lg
   height: $input-height-lg
@@ -164,14 +166,17 @@ input.input-range
   background-color: $background-color-input-contrast
 
 .input-field.input-field-error,
-.input-field-error .input-field
+.input-field-error .input-field,
+.StripeElement--invalid
   color: $text-color-red
   border-color: $border-color-red
   background-color: #ffffff
 
-  &:focus
-    border-color: $border-color-red
-    box-shadow: 0 0 0.125rem 0 lighten($red, 16%)
+.input-field.input-field-error:focus,
+.input-field-error .input-field:focus,
+.StripeElement--invalid.StripeElement--focus
+  border-color: $border-color-red
+  box-shadow: 0 0 0.125rem 0 lighten($red, 16%)
 
 .input-error-message
   float: left
