--- a/app/views/admin/location.slim
+++ b/app/views/admin/location.slim
@@ -1,4 +1,22 @@
 javascript:
   const LOCATION_NAME = "#{location.name}";
 
+script(src='https://js.stripe.com/v3/')
+
+javascript:
+  var stripe = Stripe("#{ENV['STRIPE_PUBLIC_KEY']}");
+  var elements = stripe.elements();
+  var card = elements.create('card', { style: {
+        base: {
+          fontFamily: 'Hack',
+          fontSmoothing: 'antialiased',
+          fontSize: '11px',
+          fontWeight: 400,
+          '::placeholder': {
+            color: '#767676'
+          }
+        },
+      }
+    });
+
 = javascript_pack_tag 'admin_location'
