minor steps completed, testing remains

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -194,6 +194,9 @@ input.input-range
   font-weight: 700
   color: #444444
 
+.input-error-message:empty
+  display: none
+
 .input-error-message.input-lg
   font-size: $font-size-default
   padding: $padding-ex-sm
