--- a/app/views/public/emails/customer.slim
+++ b/app/views/public/emails/customer.slim
@@ -28,8 +28,8 @@
   h6.margin-bottom-sm Taxes & Fees
   ul.left.whole.list-no-style
     li
-      span.left= "Sales (#{format_percent(@email.fetch(:tax).fetch(:value))})"
-      span.right= format_currency(@email.fetch(:tax).fetch(:value))
+      span.left= "Sales (#{format_percent(@email.fetch(:tax_rate))})"
+      span.right= format_currency(@email.fetch(:tax))
 
   h5
     span.left Estimated Total:
