new rental form tested, more testing needed nonetheless

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -7,6 +7,7 @@
 @import "global/type"
 
 @import "modules/mobile"
+@import "modules/rental_invoice"
 
 @import "components/buttons"
 @import "components/flash"
