--- a/app/views/layouts/public.slim
+++ b/app/views/layouts/public.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title GimmeCar - Redlands Car Rental
-    = stylesheet_link_tag 'application'
+    = stylesheet_link_tag 'application', :media => 'all'
     = stylesheet_link_tag 'public/landing'
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
     link(href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet')
