--- a/app/views/public/emails/samay.slim
+++ b/app/views/public/emails/samay.slim
@@ -30,7 +30,7 @@
 
   h6.margin-bottom-sm Rates
   ul.left.whole.list-no-style
-    - @email.fetch(:rates).each do |rate|
+    - @email.fetch(:details).each do |rate|
       span.left= format_date(rate.fetch(:date))
       span.right= format_currency(rate.fetch(:value))
 
