minor optimizations to animation, signature pad, layout

--- a/app/views/admin/location.slim
+++ b/app/views/admin/location.slim
@@ -8,7 +8,7 @@ javascript:
   var elements = stripe.elements();
   var card = elements.create('card', { style: {
         base: {
-          fontFamily: 'Hack',
+          fontFamily: '"Hack"',
           fontSmoothing: 'antialiased',
           fontSize: '11px',
           fontWeight: 400,
