--- a/app/assets/stylesheets/components/_table.sass
+++ b/app/assets/stylesheets/components/_table.sass
@@ -2,3 +2,50 @@
   width: 100%
   position: relative
   border-collapse: collapse
+
+  font-size: 0.875rem
+  text-align: left
+  font-weight: 400
+  vertical-align: middle
+
+  td,
+  th
+    margin: 0
+    padding: $padding-sm
+
+  thead
+    color: #888888
+
+  tbody
+    td.checkbox
+      padding-right: 0
+      width: 1rem + $padding-sm
+
+    td
+      background: $background-color-panel
+
+    tr
+      border-top: 1px solid $border-color-light
+      border-bottom: 1px solid $border-color-light
+      cursor: pointer
+
+    tr.clickable
+
+    tr.selected
+      font-weight: 600
+
+  .button-checkbox
+    width: 1rem
+    height: 1rem
+    padding: 0
+    margin: 0
+    float: left
+
+    background: #ffffff
+    border: 0.0625rem solid $border-color-input
+    border-radius: 0.125rem
+
+  tr.selected .button-checkbox,
+  .button-checkbox.selected
+    border: 0.25rem solid $border-color-blue
+    background: $blue
