basic rental page created

--- a/app/assets/stylesheets/components/_panels.sass
+++ b/app/assets/stylesheets/components/_panels.sass
@@ -7,3 +7,17 @@
   border: 1px solid $border-color-panel
   border-radius: 0.125rem
   background-color: $background-color-panel
+
+.panel-padding
+  padding: $padding-sm
+
+.panel-list-header
+  margin-bottom: $margin-sm
+
+  font-size: $font-size-default
+  font-weight: 700
+  text-transform: uppercase
+  color: #888888
+
+.panel-list
+  list-style-type: none
