--- a/app/assets/stylesheets/components/_table.sass
+++ b/app/assets/stylesheets/components/_table.sass
@@ -49,3 +49,13 @@
   .button-checkbox.selected
     border: 0.25rem solid $border-color-blue
     background: $blue
+
+.panel-table.panel-table-key-pair
+  td:first-of-type
+    width: 35%
+
+    background: #f1f8ff
+    font-weight: 600
+
+  td:last-of-type
+    width: 65%
