--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -92,7 +92,7 @@ h6.input-label
   border: 1px solid $border-color-input
 
   cursor: pointer
-  font-size: 11px
+  font-size: 0.75rem
   font-family: "Hack"
   font-weight: 400
 
