rental show page designed

--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -23,8 +23,14 @@ a
   text-decoration: none
   outline: 0
 
+  svg
+    fill: $blue
+
   &:hover
     color: #333333
+
+    svg
+      color: #333333
 
 a.link-danger
   color: $red
