--- a/app/assets/stylesheets/components/_table.sass
+++ b/app/assets/stylesheets/components/_table.sass
@@ -46,7 +46,7 @@
 
   tbody.alternate-color
     tr
-      background: #f3f7fb
+      background: #fafafa
       border-top: 0
       border-bottom: 0
 
