--- a/app/views/public/landing/r.slim
+++ b/app/views/public/landing/r.slim
@@ -5,11 +5,11 @@
 
   .whole.margin-top-default
     b.text-light Prepared For:
-    h4 Niyati Patel
+    h4 Jay Patel
 
   .whole.margin-top-default.rental-invoice-summary
     h4.invoice-one-line We appreicate your business!
-    p Thanks for being a customer. A detailed summary of your invoice is below. If you have any questions, we are happy to help. Email support@capyx.com or call 909.810.8639.
+    p Thanks for being a customer. A detailed summary of your invoice is below. If you have any questions, we are happy to help. Email support@gimmecar.com or call 909.810.8639.
     h4.invoice-one-line
 
   .rental-invoice-summary.input-block.whole.margin-top-lg
@@ -17,7 +17,7 @@
     ul.left.whole.list-no-style
       li
         | Rental Number:&nbsp;
-        b #3241023
+        b #1910381
 
       li
         | Location:&nbsp;
@@ -25,47 +25,47 @@
 
       li
         | Vehicle:&nbsp;
-        b Toyota Corolla
+        b Honda Odyssey
 
       li
         | Pickup:&nbsp;
-        b 2/17/2017 @ 5:04 PM
+        b 3/14/2017 @ 8:00 AM
 
       li
         | Drop Off:&nbsp;
-        b 2/23/2017 @ 12:36 PM
+        b 3/16/2017 @ 8:00 PM
 
     h4.margin-bottom-sm Rates
     ul.left.whole.list-no-style
       li
-        span.left 2/17/2017
-        span.right $35.00
+        span.left 3/14/2017
+        span.right $112.00
       li
-        span.left 2/18/2017
-        span.right $35.00
+        span.left 3/15/2017
+        span.right $112.00
       li
-        span.left 2/19/2017
-        span.right $35.00
+        span.left 3/16/2017
+        span.right $112.00
+
+    h4.margin-bottom-sm Add-ons
+    ul.left.whole.list-no-style
       li
-        span.left 2/20/2017
-        span.right $35.00
+        span.left Rental Collision Protection ($20 / day)
+        span.right $60.00
       li
-        span.left 2/21/2017
-        span.right $35.00
-      li
-        span.left 2/22/2017
-        span.right $35.00
+        span.left Gas - Prepaid (21 Gallons)
+        span.right $58.17
 
     h4.invoice-one-line.margin-bottom-default
       span.left Subtotal:
-      span.right $210.00
+      span.right $454.17
 
     h4.margin-bottom-sm.margin-top-sm Taxes & Fees
     ul.left.whole.list-no-style
       li
         span.left Sales (8%)
-        span.right $16.80
+        span.right $36.34
 
     h4.invoice-one-line
       span.left Total:
-      span.right $226.80
+      span.right $490.51
