--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -64,8 +64,16 @@
   width: $input-height
   padding: 0
 
-  [class^="icon-"]:before
-    font-size: 0.875rem
+  svg
+    height: 1.25rem
+    width: 1.25rem
+    margin: ($input-height - 1.25rem - 0.125rem)/2
+
+.btn.btn-icon.btn-sm
+  svg
+    height: 1rem
+    weight: 1rem
+    margin: ($input-height-sm - 1rem - 0.125rem)/2
 
 .btn.btn-link
   height: auto
