rental system created, major bug needed

--- a/app/assets/stylesheets/components/_panels.sass
+++ b/app/assets/stylesheets/components/_panels.sass
@@ -2,6 +2,7 @@
 @import "global/layout"
 
 .panel
+  float: left
   margin-bottom: $margin-default
 
   border: 1px solid $border-color-panel
@@ -28,8 +29,10 @@
   list-style-type: none
 
 .panel-base-header
+  float: left
   display: flex
   flex-direction: row
+  width: 100%
 
   padding: $padding-default
 
