--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -3,7 +3,6 @@ $input-margin-x: $margin-ex-sm/2
 
 .form-container
   width: 100%
-  max-width: 40rem
 
   margin: 0 auto
 
@@ -92,7 +91,7 @@ h6.input-label
   border: 1px solid $border-color-input
 
   cursor: pointer
-  font-size: 11px
+  font-size: 0.75rem
   font-family: "Hack"
   font-weight: 400
 
