--- a/app/assets/stylesheets/components/_table.sass
+++ b/app/assets/stylesheets/components/_table.sass
@@ -2,3 +2,100 @@
   width: 100%
   position: relative
   border-collapse: collapse
+
+  font-size: 0.875rem
+  text-align: left
+  font-weight: 400
+
+  td,
+  th
+    margin: 0
+    padding: $padding-sm
+
+  thead
+    color: #888888
+    font-size: 0.75rem
+    text-transform: uppercase
+    border-bottom: 1px solid $border-color-light
+
+    th
+      font-weight: 400
+
+  tbody
+    td.checkbox
+      padding-right: 0
+      width: 1rem + $padding-sm
+
+    tr
+      background: $background-color-panel
+      border-top: 1px solid $border-color-light
+      border-bottom: 1px solid $border-color-light
+      cursor: pointer
+
+      vertical-align: middle
+      color: #333333
+
+      &:hover
+        color: #000000
+
+    tr.clickable
+
+    tr.selected
+      font-weight: 600
+      color: #000000
+
+  tbody.alternate-color
+    tr
+      background: #fafafa
+      border-top: 0
+      border-bottom: 0
+
+    tr:nth-child(even)
+      background: $background-color-panel
+
+
+  .button-checkbox
+    width: 1rem
+    height: 1rem
+    padding: 0
+    margin: 0
+    float: left
+
+    background: #ffffff
+    border: 0.0625rem solid $border-color-input
+    border-radius: 0.125rem
+
+  tr.selected .button-checkbox,
+  .button-checkbox.selected
+    border: 0.25rem solid $border-color-blue
+    background: $blue
+
+.panel-table.panel-table-key-pair
+  table-layout: fixed
+  margin-top: $padding-sm
+  margin-bottom: $padding-sm
+
+  td,
+  th
+    padding-top: $padding-ex-sm
+    padding-bottom: $padding-ex-sm
+
+  td:first-of-type,
+  th:first-of-type
+    padding-left: $padding-default
+    padding-right: $padding-sm
+
+    width: 35%
+    font-weight: 400
+    text-align: right
+    color: #888888
+
+  td:nth-of-type(2),
+  th:nth-of-type(2)
+    padding-right: $padding-default
+    padding-left: $padding-sm
+
+  tr
+    border-top: 0
+    border-bottom: 0
+    vertical-align: top
