--- a/app/assets/stylesheets/components/_panels.sass
+++ b/app/assets/stylesheets/components/_panels.sass
@@ -2,8 +2,110 @@
 @import "global/layout"
 
 .panel
+  float: left
   margin-bottom: $margin-default
 
   border: 1px solid $border-color-panel
   border-radius: 0.125rem
   background-color: $background-color-panel
+
+.panel-base
+  box-shadow: 0 0.125rem 0.5rem 1px rgba(0, 0, 0, .05), 0 0 0.125rem 1px rgba(0, 0, 0, 0.03)
+  border: 0
+
+.panel-padding
+  padding: $padding-default
+  padding-bottom: 0
+
+.panel-list-header
+  margin-bottom: $margin-sm
+
+  font-size: $font-size-default
+  font-weight: 700
+  text-transform: uppercase
+  color: #888888
+
+.panel-list
+  list-style-type: none
+
+.panel-base-header
+  float: left
+  display: flex
+  flex-direction: row
+  width: 100%
+
+  padding: $padding-default
+
+  h2
+    margin: 0
+    float: left
+
+  h2,
+  .flex-element
+    flex: 1
+    align-self: center
+
+.panel-main-details
+  margin: 0
+  float: left
+  width: 100%
+  border-top: 1px solid $border-color-dark
+  border-bottom: 1px solid $border-color-light
+  background: #fafafa
+
+  dt,
+  dd
+    float: left
+    padding-top: $padding-sm
+    padding-bottom: $padding-sm
+
+    border-top: 1px solid $border-color-light
+
+    font-size: $font-size-default
+
+  dt
+    width: 35%
+    padding-left: $padding-default
+    padding-right: $padding-sm
+    color: #333333
+
+  dd
+    width: 65%
+    padding-right: $padding-default
+    padding-left: $padding-sm
+    color: #000000
+
+.panel-details-link
+  position: relative
+  margin: 0
+  float: left
+  width: 100%
+
+  background: #ffffff
+  border-top: 1px solid $border-color-light
+
+  dt,
+  dd
+    width: 100%
+    border-top: 0
+    padding-left: $padding-default
+    padding-right: $padding-default
+
+  dt
+    padding-bottom: $padding-ex-sm
+
+  dd
+    padding-top: $padding-ex-sm
+
+  svg
+    position: absolute
+    top: 50%
+    right: $padding-default
+    margin-top: -0.375rem
+
+    height: 0.75rem
+    width: 0.75rem
+
+  span.description
+    font-size: 0.75rem
+    color: #888888
